--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>HELLO WORLD!</h1>
-
+  <img src="test.jpg" alt="">
   <h3>This is the test file for geogory's simple-server!</h3>
   <p>this server is a minimlist http server written in rust I plan on making this a fully fledged server that is snappy and minimal.</p>
   <br>
