--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 <body>
   <h1>HELLO WORLD!</h1>
-  <img src="test.jpg" alt="">
+  <img class="man" src="test.jpg" alt="">
   <h3>This is the test file for geogory's simple-server!</h3>
-  <p>this server is a minimlist http server written in rust I plan on making this a fully fledged server that is snappy and minimal.</p>
+  <p>this server is a minimlist http server written in rust I plan on making this a fully fledged server that is snappy
+    and minimal.</p>
   <br>
   <p> I plan on also adding http support and maybe ftp I'm unsure for the time being</p>
-  <p>Right now the server doesn't even have the ability to send images to requests and their isn't a presistant connection but I will work out those things soon.</p>
+  <p>Right now the server doesn't even have the ability to send images to requests and their isn't a presistant
+    connection but I will work out those things soon.</p>
   <p>this is hopefully a project I will stick to and finish and make it whole and complete</p>
 </body>
 
